--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,6 +9,9 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+          <a class="nav-link" href="{{"/FAQ" | relative_url }}">FAQ</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
         <!--
@@ -17,10 +20,10 @@
         </li>
         -->
         <li class="nav-item">
-          <a class="nav-link" href="{{"/research/index" | relative_url }}">Research</a>
+          <a class="nav-link" href="{{"/past/index" | relative_url }}">Past greatness</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/cv" | relative_url }}">CV</a>
+          <a class="nav-link" href="{{"/future/index" | relative_url }}">Future awesomeness</a>
         </li>
         <!--
         <li class="nav-item">
