--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,10 +20,10 @@
         </li>
         -->
         <li class="nav-item">
-          <a class="nav-link" href="{{"/past/index" | relative_url }}">Past greatness</a>
+          <a class="nav-link" href="{{"/past/index" | relative_url }}">Past</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/future/index" | relative_url }}">Future awesomeness</a>
+          <a class="nav-link" href="{{"/upcoming/index" | relative_url }}">Upcoming</a>
         </li>
         <!--
         <li class="nav-item">
